# rustic_server

./: .gitignore  404.html  Cargo.toml  README.md  index.html  startClient.sh  startServer.sh
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/assets/: menu_text.txt
server/lib/rs-concurrency/: Cargo.toml
server/lib/rs-concurrency/src/: lib.rs  worker.rs
server/lib/rs-cryptography/: Cargo.toml
server/lib/rs-cryptography/src/: aes_handler.rs  bcrypt_handler.rs  lib.rs  rand_handler.rs
server/lib/rs-game/: Cargo.toml
server/lib/rs-game/src/: lib.rs
server/lib/rs-handler/: Cargo.toml
server/lib/rs-handler/src/: lib.rs
server/lib/rs-network/: Cargo.toml
server/lib/rs-network/src/: lib.rs  request.rs  response.rs
server/src/: main.rs
server/src/application/: handler.rs  mod.rs
server/src/game/: menu.rs  mod.rs
server/src/system/: mod.rs
server/src/system/application/: mod.rs
server/src/system/concurrency/: mod.rs  worker.rs
server/src/system/log/: mod.rs
server/src/system/network/: mod.rs  request.rs  response.rs
server/var/: encrypted_words.txt
