[package]
name = "rs-handler"
version = "0.1.0"
authors = ["Zac Vuković <contact@cyn1x.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rs-cryptography" = { path = "../../lib/rs-cryptography" }
"rs-game" = { path = "../../bin/rs-game" }
