[package]
name = "rs-network"
version = "0.1.0"
authors = ["Zac Vuković <contact@cyn1x.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rs-concurrency" = { path = "../rs-concurrency" }
"rs-handler" = { path = "../rs-handler" }
